2005-01-10  Daniel Sebald  <daniel.sebald@ieee.org>

	* src/graphics.c demo/image.dem: Correct a problem with scaling of
	images from 'with image'.

2005-01-08  Ethan Merritt  <merritt@u.washington.edu>

	* src/term.c (term_start_multiplot): Replace keywords "rowmajor" and
	"columnmajor" with "columnsfirst" and "rowsfirst", respectively.

	* docs/gnuplot.doc: Correct the description of row and column layout
	'set term multiplot layout <rows>,<cols> {rowsfirst|columnsfirst}'

2005-01-08  Harald Harders  <h.harders@tu-bs.de>

	* src/pm3d.c src/term.c src/term_api.h term/epslatex.trm term/post.trm
	term/pslatex.trm: SF patch #1098252 "Use variable gppsfile for
	postscript output". This patch uses the variable gppsfile (formerly
	postscript_gpoutfile) instead of gpoutfile for all PostScript output.
	This is very useful for terminals that produce two files where one of
	them is PostScript (for example pslatex and epslatex).
	 
	* src/color.c src/pm3d.c src/term.c src/term_api.h term/epslatex.trm
	term/post.trm term/pslatex.trm: SF patch [ 1098249 ] "Rename
	postscript_gpoutfile to gppsfile". This patch renames the handler
	'FILE *postscript_gpoutfile' to 'gppsfile' since the old variable name
	is too long for more often use.

2005-01-05  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* term/svg.trm (SVG_init): Updated DOCTYPE name and reference to
	current standard: SVG 1.1. Added an XMLNS namespace declaration to
	satisfy requirements for XML documents.

2005-01-05  Bastian Maerkisch  <bmaerkisch@web.de>

	* src/os2/gclient.c: Some more cleanup: Removed some unused variables
	and unused code which eliminates a lot of compiler warnings.

2005-01-04  Ethan Merritt  <merritt@u.washington.edu>

	* src/term.c src/term_api.h: Instead of exporting ignore_enhanced_text
	from term.c as a global TBOOLEAN, provide a wrapper routine
	ignore_enhanced(TBOOLEAN flag);

	* src/graphics.c (do_plot) src/graph3d.c (do_3dplot): Call new routine